--- a/cookbooks/bootstrap/Gemfile
+++ b/cookbooks/bootstrap/Gemfile
@@ -2,6 +2,9 @@ source 'https://rubygems.org'
 
 gem 'chef'
 gem 'chefspec'
+gem 'test-kitchen'
+gem 'kitchen-vagrant'
+gem 'kitchen-inspec'
 
 group :lint do
   gem 'foodcritic'
