--- a/cookbooks/bootstrap/Gemfile
+++ b/cookbooks/bootstrap/Gemfile
@@ -1,18 +1,18 @@
-source 'https://rubygems.org'
+source "https://rubygems.org"
 
-gem 'chef'
-gem 'chefspec'
-gem 'test-kitchen'
-gem 'kitchen-vagrant'
-gem 'kitchen-inspec'
+gem "chef"
+gem "chefspec"
+gem "test-kitchen"
+gem "kitchen-vagrant"
+gem "kitchen-inspec"
 
 group :lint do
-  gem 'foodcritic'
-  gem 'rubocop'
-  gem 'rainbow'
+  gem "foodcritic"
+  gem "rubocop"
+  gem "rainbow"
 end
 
 group :unit do
-  gem 'berkshelf'
-  gem 'fauxhai'
+  gem "berkshelf"
+  gem "fauxhai"
 end
